# mapsoft

./: .gear-rules  .gitignore  0001-skip-convs_gtiles.patch  ChangeLog  DONE  Doxyfile  Makefile  Makefile.am  Readme.build  Readme.md  SConstruct  check_deps  configure.ac  doc.txt  doxygen.conf  mapsoft-9999.ebuild  mapsoft-9999.ebuild.txt  mapsoft.py  mapsoft.spec  module-dep.py  mview.cpp  mview.h  txt
arc/: ChangeLog  znaki2.tgz
bigmap/: Makefile  libbm.cpp  libbm.h  map4.cpp  map6.cpp
core/: .gitignore  1.py  Makefile.am  Readme.md  SConscript  finddeps  mapsoft.h  swig.i
experimental/: .gitignore  Makefile.am
experimental/gred/: Makefile  Makefile.am  README  action.h  action_manager.h  action_viewer.h  action_viewer_test1.cpp  action_viewer_test2.cpp  action_viewer_test3.cpp  actions.cpp  actions.h  covering.cpp  covering.h  covering_test.cpp  dthread_rubb_viewer_test1.cpp  dthread_viewer.cpp  dthread_viewer.h  dthread_viewer_test1.cpp  dthread_viewer_test2.cpp  gcoord.h  gobj.cpp  gobj.h  gplane.cpp  gplane.h  gred.h  mthread_rubb_viewer.h  mthread_rubb_viewer_test1.cpp  mthread_viewer.cpp  mthread_viewer.h  mthread_viewer_test1.cpp  mthread_viewer_test2.cpp  rubber.cpp  rubber.h  rubber_viewer.h  simple_rubb_viewer.h  simple_rubb_viewer_test1.cpp  simple_rubb_viewer_test2.cpp  simple_viewer.cpp  simple_viewer.h  simple_viewer_test1.cpp  (+7 more)
experimental/gred/iface/: action.h  gobj.h  viewer.h
experimental/gred/tests/: Makefile.am  action1.cpp  action2.cpp  action3.cpp  action_test_box.h  action_test_circ.h  action_test_line.h  all_viewers.cpp  dthread1.cpp  gobj_test_grid.cpp  gobj_test_grid.h  gobj_test_tile.cpp  mthread1.cpp  mthread2.cpp  mthread_rubb1.cpp  simple1.cpp  simple_rubb1.cpp  simple_rubb2.cpp  two_rubbers.cpp
geo_io/: Makefile  Readme  SConscript  enums.cpp  fig.cpp  fig.h  fig_bb.cpp  fig_utils.h  filters.cpp  geo_convs.cpp  geo_convs.h  geo_data.cpp  geo_data.h  geo_enums.cpp  geo_enums.h  geo_names.h  geo_refs.h  geofig.cpp  geofig.h  gs_bbx.h  gs_bbx_test.cpp  i_fig.cpp  io.cpp  io.h  io_gps.cpp  io_gps.h  io_gu.cpp  io_gu.h  io_kml.cpp  io_kml.h  io_oe.cpp  io_oe.h  io_xml.cpp  io_xml.h  mp.cpp  mp.h  o_fig.cpp  o_htm.cpp
gred/: Makefile  gplane.h  gred.h  mthread_viewer.h  mthread_viewer_test.cpp  mthread_viewer_test1.cpp  mthread_viewer_test2.cpp  simple_viewer.cpp  simple_viewer.h  simple_viewer_test.cpp  simple_viewer_test2.cpp
jeeps/: CHANGE  Makefile  SConscript  garminusb.h  gps.h  gpsapp.c  gpscom.c  gpsdatum.c  gpsdatum.h  gpsinput.c  gpslibusb.c  gpsmem.c  gpsport.h  gpsproj.h  gpsprot.c  gpsprot.h  gpssend.c  gpsserial.c  gpsusbread.c  gpsusbsend.c  gpsusbstub.c  gpsusbwin.c  util.c
layers/: README  SConscript  action_data.h  layer.h  layer_geo.h  layer_geodata.h  layer_geodata1.h  layer_geodata_g.h  layer_geomap.h  layer_google.h  layer_google1.h  layer_grid.h  layer_ks.h  layer_map.h  layer_r.h  layer_rh.h  layer_wait.h
lib/: .gitignore  Doxyfile  Doxygen.txt  Readme.md  SConscript  mapsoft.h
lib2d/: ChangeLog  SConscript  io2d.h  line.h  line_polycrop.h  line_rectcrop.h  line_utils.h  point.h  (+7 more)
programs/: .gitignore  ChangeLog  Makefile  Makefile.am  README  Readme  SConscript  USECASES  common.pod  convs_gtiles.cpp  convs_map2pt.cpp  convs_nom.cpp  convs_pt2pt.cpp  fig_crop.cpp  fig_ref_mod.cpp  fig_sort.cpp  mapsoft_add2fig.cpp  mapsoft_calc_nom2ll.cpp  mapsoft_convert.1  mapsoft_convert.cpp  mapsoft_convert.pod  mapsoft_fig2fig.cpp  mapsoft_gen.cpp  mapsoft_geofig.cpp  mapsoft_geofig.pod  mapsoft_getgoogle.cpp  mapsoft_getks.cpp  mapsoft_getks_ll.cpp  mapsoft_getks_nom.cpp  mapsoft_googleview.cpp  mapsoft_googleview1.cpp  mapsoft_imgview.cpp  mapsoft_imgview1.cpp  mapsoft_ksview.cpp  mapsoft_map2fig.cpp  mapsoft_mapcnv.cpp  mapsoft_mapcnv1.cpp  mapsoft_mapview.cpp  mapsoft_measure.cpp  mapsoft_mkmap.cpp  (+10 more)
viewer/: .gitignore  Makefile  Makefile.am  SConscript  action_manager.cpp  action_manager.h  action_mode.h  am_add_track.h  am_add_wpt.h  am_delete_tpt.h  am_delete_wpt.h  am_edit_tpt.h  am_edit_track.h  am_edit_wpt.h  am_make_tiles.h  am_mark_trk.h  am_move_tpt.h  am_move_wpt.h  dataview.cpp  dataview.h  generic_dialog.cpp  generic_dialog.h  layer.h  layer_google1.h  layer_grid.h  layer_jpeg_simple.h  layer_wait.h  layerlist.h  mapsoft_googleview.cpp  mapsoft_ksview.cpp  mapsoft_mapview.cpp  mapview.cpp  mapview.h  rubber.h  test.cpp  test_gp.cpp  test_widgets.cpp  viewer.cpp  viewer.h  widgets.cpp  (+3 more)
viewer/actions/: action_manager.cpp  action_manager.h  action_mode.cpp  action_mode.h  am_add_file.h  am_add_tpt.h  am_add_track.h  am_add_wpt.h  am_del_trk.h  am_delete_tpt.h  am_delete_wpt.h  am_download.h  am_draw_opt.h  am_edit_map.h  am_edit_tpt.h  am_edit_track.h  am_edit_wpt.h  am_fullscreen.h  am_goto_ll.h  am_hide_panels.h  am_join_m.h  am_join_t.h  am_join_w.h  am_llref.h  am_make_tiles.h  am_mark_trk.h  am_move_tpt.h  am_move_wpt.h  am_nav.h  am_new.h  am_open.h  am_pano.h  am_quit.h  am_refmap.cpp  am_refmap.h  am_save.h  am_save_all.h  am_save_image.h  am_save_vis.h  am_setref.h  (+8 more)
viewer/dialogs/: add_trk.xml  add_wpt.xml  ch_conf.cpp  ch_conf.h  download.cpp  download.h  download.xml  draw_opt.cpp  draw_opt.h  err.cpp  err.h  map.cpp  map.h  nav.cpp  nav.h  pano.cpp  pano.h  print.cpp  print.h  save_img.cpp  save_img.h  show_pt.cpp  show_pt.h  show_pt.xml  srtm_opt.cpp  srtm_opt.h  trace.cpp  trace.h  trk.cpp  trk.h  trk_filter.cpp  trk_filter.h  trk_mark.cpp  trk_mark.h  trk_pt.cpp  trk_pt.h  wpt.cpp  wpt.h
viewer/images/: SConscript
viewer/layers/: layerlist.h  maps.h  maps_panel.cpp  maps_panel.h  panel_cols.h  srtm.h  trks.h  trks_panel.cpp  trks_panel.h  wpts.h  wpts_panel.cpp  wpts_panel.h
viewer/panels/: maps_panel.cpp  maps_panel.h  misc_panel.h  panel.h  srtm.h  srtm_panel.h  status_panel.h  trks_panel.cpp  trks_panel.h  vmap_panel.cpp  vmap_panel.h  workplane.cpp  workplane.h  wpts_panel.cpp  wpts_panel.h
viewer/widgets/: comboboxes.cpp  comboboxes.h  coord_box.cpp  coord_box.h  nom_box.cpp  nom_box.h  page_box.cpp  page_box.h  rainbow.cpp  rainbow.h  simple_combo.h  w_page.cpp  w_page.h
(+1560 files in other folders)
