LDADD =\
 ../libgred.a\
 ../../../core/lib2d/lib2d.a\
 gobj_test_tile.o\
 gobj_test_grid.o\
 $(GTKMM_LIBS)

noinst_OBJECTS = gobjs/test_tile.o gobjs/test_grid.o

INCLUDES = $(GTKMM_CFLAGS) -I..

bin_PROGRAMS =\
  simple1\
  simple2\
  mthread1\
  mthread2\
  dthread1\
  dthread2\
  simple_rubb1\
  simple_rubb2\
  mthread_rubb1\
  dthread_rubb1\
  action1\
  action2\
  action3\
  all_viewers\
  two_rubbers

simple1_SOURCES = simple1.cpp
simple2_SOURCES = simple2.cpp
mthread1_SOURCES = mthread1.cpp
mthread2_SOURCES = mthread2.cpp
dthread1_SOURCES = dthread1.cpp
dthread2_SOURCES = dthread2.cpp
simple_rubb1_SOURCES = simple_rubb1.cpp
simple_rubb2_SOURCES = simple_rubb2.cpp
mthread_rubb1_SOURCES = mthread_rubb1.cpp
dthread_rubb1_SOURCES = dthread_rubb1.cpp
action1_SOURCES = action1.cpp
action2_SOURCES = action2.cpp
action3_SOURCES = action3.cpp
all_viewers_SOURCES = all_viewers.cpp
two_rubbers_SOURCES = two_rubbers.cpp
